static/main.css
/* latin */
@font-face {
  font-family: 'Sono';
  font-style: normal;
  font-weight: 300;
  src: url(https://fonts.gstatic.com/s/sono/v6/aFTO7PNiY3U2Cqf_aYEN64CYaK18YUhIma9UZrHl.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin */
@font-face {
  font-family: 'Sono';
  font-style: normal;
  font-weight: 700;
  src: url(https://fonts.gstatic.com/s/sono/v6/aFTO7PNiY3U2Cqf_aYEN64CYaK18YUhIma9UZrHl.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin */
@font-face {
  font-family: 'VT323';
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/vt323/v17/pxiKyp0ihIEF2isfFJXUdVNF.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

body {
  background-color: black;
  font-family: 'Sono';
  color: white;
}

h1, h2, h3 {
  font-family: 'VT323';
}

main {
    max-width:65ex;
    margin: auto;
}


* {
  box-sizing: border-box;
}

h1 {
  text-shadow: 1px 1px #00ff11;
  font-weight: bold;
  text-transform: uppercase;
  color: white;
  text-align: center;
  font-size: 2.5em;
}

h2 {
  font-weight: bold;
  text-transform: lowercase;
  text-shadow: 0.5px 0.5px #00ff11;
  color: white;
  text-align: left;
  font-size: 1.3em;
  padding-bottom: 0em;
  margin-bottom: 0.4em;
}

h3 {
  font-weight: bold;
  text-transform: uppercase;
  color: white;
  text-align: center;
  font-size: 1.3em;
  margin-bottom: 0.1em;
  margin-top: 0em;
  letter-spacing: 0.2em;
}


.bio {
    font-style: italic;;
    border: solid 2px white;
    border-radius: 5px;
    padding: 10px;
}

input[type=text], select, textarea, input[type=search], input[type=password], input[type=date] {
  width: 100%;
  appearance: textfield;
  padding: 5px;
  border: 1px solid #00ff11;
  border-radius: 4px;
  resize: none;
  background-color: black;
  font-family: 'Sono';
  font-size: 1em;
  text-transform: lowercase;
  color:#00ff11;
  margin-bottom: 0.5em;
  caret-color: #00ff11;
}

input:focus, textarea:focus {
  outline: none;
}

select {
  appearance: none;
  cursor: pointer;
}

::placeholder {
  color: #007808;
}

.error, input[type=text].error {
  border: 2px solid red;
}

.container {
  border: dotted 1px white;
  background-color: black;
  padding: 3%;
  margin-bottom: 1em;
}

.col-15 {
  float: left;
  width: 15%;
  margin-top: 3px;
  word-break: break-all;
}

.col-20 {
  float: left;
  width: 20%;
  margin-top: 3px;
  word-break: break-all;
  padding-right: 0.4em;
}

.col-20-nm {
  float: left;
  width: 20%;
  height: 100%;
  word-break: break-word;
}

.col-25 {
  float: left;
  width: 25%;
  margin-top: 3px;
  word-break: break-word;
}

.col-25-nm {
  float: left;
  width: 25%;
  word-break: break-word;
}

.col-30 {
  float: left;
  width: 30%;
  margin-top: 3px;
  word-break: break-all;
}

.col-70 {
  width: 70%;
  float: left;
  margin-top: 3px;
  word-break: break-all;
}

.col-75 {
  width: 75%;
  float: left;
  margin-top: 3px;
  word-break: break-word;
}

.col-50 {
  float: left;
  width: 50%;
  margin-top: 3px;
  word-break: break-all;
}

.col-60 {
  float: left;
  width: 60%;
  margin-top: 3px;
  padding-left: 0.3em;
  padding-right: 0.3em;
}

.col-100 {
  float: left;
  width: 100%;
  margin-top: 3px;
}

.col-80 {
  float: left;
  width: 80%;
  margin-top: 3px;
}

.col-85 {
  float: left;
  width: 85%;
  margin-top: 3px;
}

/* Clear floats after the columns */
.row::after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
/*
@media screen and (max-width: 600px) {
  .col-25, .col-75, input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
}
*/

@media screen and (max-width: 600px) {
  #post-button {
    width: 100%;
    height: 2em;
  }
  .primary-button {
    width: 100%;
    height: 2em;
  }
  .secondary-button {
    position: relative;
    height: 2em;
    width: 50%;
    left:-25%;
  }
}
*/

.header {
    font-weight: bold;
}

.header breadcrumb {
    text-align: left;
    font-size: 16px;
}

.header user_greeting {
    float: right;
    font-size: 16px;
}

table {
  width: 100%;
  border-collapse: collapse;
}
.postcard {
    border: 1px dotted white;
    position: relative;
    margin: auto;
    background-color: black;
    padding: 0.2em 0.5em 0.5em 0.5em;
}

.activity-card {
    border: 1px dotted white;
    min-height:7ex;
    position: relative;
    margin: auto;
    padding: 0.5em;
    background-color: black;
}

.unseen {
  font-weight: bold;
}

.userinfo {
    margin-bottom: 10px;
}

.name {
  font-weight: bold;
  color: #00ff11;
  font-family: 'VT323';
  font-size: 1.3em;
  word-break: break-word;
  margin-top: 0px;
  margin-bottom: 0.1em;
  text-decoration: none;
}

.name a {
  color: #00ff11;
  text-decoration: none;
}

.mention {
  color: cyan;
  text-decoration: underline wavy 0.8px;
  -webkit-text-decoration: underline wavy 0.8px;
  font-weight: bold;
}

.tabs {
  display: flex;
  background-color: black;
  border: 1px solid #00ff11;
  border-radius: 5px;
  font-size: 1.3em;
  font-family: 'VT323';
  color: #00ff11;
  margin-bottom: 0.5em;
}

.tabs > .tab {
  flex: 1;
  display: flex;
}

.tab > .tab-input {
  width: 0;
  height: 0;
  margin: 0;
  display: none;
}

.tab > .tab-box {
  padding: .3rem;
  width: 100%;
  text-align: center;
  border: 2px solid rgba(0,0,0,0);
  border-radius: 5px;
}

.tab > .tab-input:checked + .tab-box {
  background: #00ff11;
  color:black;
  border-color: #00ff11;
}
/* ... */

